# angzarr-examples-python

./: .gitignore  .gitmodules  Containerfile  README.md  TASKS.md  ai_player_client.py  buf.gen.yaml  client.py  demo.py  justfile  justfile.container  kind-config.yaml  pyproject.toml  run_game.py  run_tests.py  run_whatifs.py  skaffold.yaml  standalone.yaml  test_raise_tracking.py  values.yaml
.devcontainer/: Containerfile
.github/workflows/: ci.yml
ai_player/: Containerfile  __init__.py  buf.gen.yaml  main.py  pyproject.toml  service.py
ai_player/db/: __init__.py  schema.py
ai_player/models/: __init__.py  encoder.py  poker_net.py
ai_player/proto/examples/: ai_sidecar_pb2.py  ai_sidecar_pb2_grpc.py  buy_in_pb2.py  hand_pb2.py  orchestration_pb2.py  player_pb2.py  poker_types_pb2.py  rebuy_pb2.py  registration_pb2.py  table_pb2.py  tournament_pb2.py
ai_player/state/: __init__.py  persistence.py  session.py
ai_player/training/: __init__.py  fitness_tracker.py  self_play.py  tournament_runner.py  train.py  trainer.py  training_loop.py
buy_in/: __init__.py
buy_in/pmg/: __init__.py  handlers.py  main.py  state.py  table_state.py  test_handlers.py
features/steps/: common_steps.py  compensation_steps.py  fact_flow_steps.py  hand_steps.py  merge_strategy_steps.py  player_steps.py  process_manager_steps.py  projector_steps.py  saga_steps.py  sync_mode_steps.py  table_steps.py
hand-flow/: hand_process.py
hand-flow-oo/: main.py
hand/agg/: main.py
hand/saga-player/: main.py
hand/saga-table/: main.py
player/agg/: handlers.py  main.py  rejected.py  test_handlers.py
player/saga-table/: saga.py
prj_training/: __init__.py  main.py  projector.py  schema.py
rebuy/: __init__.py
rebuy/pmg/: __init__.py  handlers.py  main.py  state.py  test_handlers.py
registration/: __init__.py
registration/pmg/: __init__.py  handlers.py  main.py  state.py  test_handlers.py  tournament_state.py
sagas/: __init__.py  base.py  hand_results_saga.py  table_sync_saga.py
table/agg/: main.py
tests/: TEST_ARCHITECTURE.md  conftest.py  test_betting_round.py
tests/compensation_unit/: test_notification.py
tests/helpers/: __init__.py  assertions.py  builders.py  executors.py  (+1 more)
tournament/: __init__.py
(+37 files in other folders)
