[project]
name = "angzarr-poker"
version = "0.1.0"
description = "Poker engine built on angzarr CQRS/ES framework"
requires-python = ">=3.11"
# Dependencies
dependencies = [
    "angzarr-client>=0.3.1",
    "protobuf>=5.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "structlog>=24.0.0",
    "behave>=1.3.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "debugpy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["angzarr", "agg-player", "agg-table", "agg-hand"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --ignore=tests/features"

[tool.ruff.lint.per-file-ignores]
# These files require sys.path manipulation before imports
"run_game.py" = ["E402"]
"tests/conftest.py" = ["E402"]
